## Process this file with automake to produce Makefile.in

SUBDIRS = man ca de fr it ja nl sv

EXTRA_DIST =			\
	BUGS			\
	CodingStyle		\
	FAQ			\
	HACKING			\
	INSTALL.Cygwin		\
	HOWTOPLAY		\
	README.AI		\
	README.agents		\
	README.attributes 	\
	README.cma		\
	README.delta		\
	README.effects		\
	README.ftwl		\
	README.graphics		\
	README.nations		\
	README.rulesets		\
	README.scorelog		\
	README.SDLClient	\
	README.sound		\
	TODO
